tests/gateway-api-migration/fixtures/master-minion-idempotent/input/common.service/overlays/dev/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
  - argocd-nginx-ingress.yaml
  - argocd-httproute.yaml
